created the initial html structure, with some text as an example

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-   <title>Document</title>
-</head>
-<body>
-   <script src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Rock-Paper_Scissor</title>
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <h1>Rock-Paper_Scissor</h1>
+        <button><img src="../img/rock.png" alt="rock" /></button>
+        <button><img src="../img/paper.png" alt="paper" /></button>
+        <button><img src="../img/scissor.png" alt="scissor" /></button>
+        <h3 class="output">il computer ha scelto ...</h3>
+        <h3 class="result">vinto, perso ...</h3>
+        <div class="scores">
+          <p id="Wins"></p>
+          <p id="Loses"></p>
+          <p id="Draws"></p>
+        </div>
+        <button class="reset">Reset Scores</button>
+      </div>
+    </main>
+    <script src="main.js"></script>
+  </body>
 </html>
