added new classes during the styling

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,11 @@
     <main>
       <div class="container">
         <h1>Rock-Paper_Scissor</h1>
-        <button><img src="../img/rock.png" alt="rock" /></button>
-        <button><img src="../img/paper.png" alt="paper" /></button>
-        <button><img src="../img/scissor.png" alt="scissor" /></button>
+        <div class="hands">
+          <button><img src="../img/rock.png" alt="rock" /></button>
+          <button><img src="../img/paper.png" alt="paper" /></button>
+          <button><img src="../img/scissor.png" alt="scissor" /></button>
+        </div>
         <h3 class="output">il computer ha scelto ...</h3>
         <h3 class="result">vinto, perso ...</h3>
         <div class="scores">
@@ -26,4 +28,3 @@
     <script src="main.js"></script>
   </body>
 </html>
-
