--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,15 @@
       <div class="container">
         <h1>Rock-Paper_Scissor</h1>
         <div class="hands">
-          <button><img src="../img/rock.png" alt="rock" /></button>
-          <button><img src="../img/paper.png" alt="paper" /></button>
-          <button><img src="../img/scissor.png" alt="scissor" /></button>
+          <button onclick="playRock()">
+            <img src="../img/rock.png" alt="rock" />
+          </button>
+          <button onclick="playPaper()">
+            <img src="../img/paper.png" alt="paper" />
+          </button>
+          <button onclick="playScissor()">
+            <img src="../img/scissor.png" alt="scissor" />
+          </button>
         </div>
         <h3 class="output">il computer ha scelto ...</h3>
         <h3 class="result">vinto, perso ...</h3>
@@ -22,7 +28,7 @@
           <p id="Loses">Loses: 0</p>
           <p id="Draws">Draws: 0</p>
         </div>
-        <button class="reset">Reset Scores</button>
+        <button class="reset" onclick="resetScore()">Reset Scores</button>
       </div>
     </main>
     <script src="main.js"></script>
