removed the example text

--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,12 @@
             <img src="../img/scissor.png" alt="scissor" />
           </button>
         </div>
-        <h3 class="output">il computer ha scelto ...</h3>
-        <h3 class="result">vinto, perso ...</h3>
+        <h3 class="output"></h3>
+        <h3 class="result"></h3>
         <div class="scores">
-          <p id="Wins">Wins: 0</p>
-          <p id="Loses">Loses: 0</p>
-          <p id="Draws">Draws: 0</p>
+          <p id="Wins"></p>
+          <p id="Loses"></p>
+          <p id="Draws"></p>
         </div>
         <button class="reset" onclick="resetScore()">Reset Scores</button>
       </div>
